Fixed spacing btween rows

--- a/styles.css
+++ b/styles.css
@@ -18,19 +18,11 @@ body {
 }
 
 .orderingFoodText {
-    /*position: relative;*/
-    /*top: 350%;*/
-    /*left: 3%;*/
-    /*text-align: center;*/
-    /*margin: 0;*/
-    /*padding: 0;*/
-
     font-family: Poppins;
     font-style: normal;
-    font-weight: 300;
+    font-weight: 200;
     font-size: 50px;
     line-height: 65px;
-    /* or 133% */
 
     color: #212529;
 }
@@ -41,13 +33,6 @@ body {
     font-weight: 600;
     font-size: 24px;
     line-height: 32px;
-    /* or 133% */
-
-    /*position: relative;*/
-    /*top: 350%;*/
-    /*left: 3%;*/
-
-    /* Primary Blue/Primary Blue */
 
     color: #3859B1;
 }
